public/styles/nav.css
nav {
  height: 120px;
  width: 100vw;
  background-color: #4056A1;
  color: #FFFFFF;
  padding: 0 1.5em;
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 1;
}

#logo {
  font-family: 'Bungee', cursive;
}

#write-new {
  display: flex;
  flex-direction: column;
  align-items: center;
}

